--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,62 @@
-.App {
-  text-align: center;
+.product {
+  width: 100%;
+  height: auto;
+  display: inline-flex;
+  flex-wrap: wrap;
+  flex-basis: 30%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.items {
+  margin: 20px;
+  height: 300px;
+  width: 300px;
+  border-radius: 25px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+img {
+  width: auto;
+  height: 150px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.img {
+  width: 100%;
+  height: 150px;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.title{
+  padding: 10px;
+  font-size: 16px;
+  height: auto;
+  margin-bottom: 10px;
+  display: flex;
+  justify-content: center;
+}
+
+/* .price{
+  padding: 10px;
+} */
+
+.cartButt{
+  display: flex;
+  justify-content: space-around;
+}
+
+.form{
+
+}
+
+ul {
+  display: flex;
+  overflow: hidden;
+}
+
+
+.anker {
+  text-decoration: none;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  font-size: 18px;
 }
