--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,7 @@ img {
   justify-content: center;
 }
 
-.title{
+.title {
   padding: 10px;
   font-size: 16px;
   height: auto;
@@ -40,13 +40,25 @@ img {
   padding: 10px;
 } */
 
-.cartButt{
+.cartButt {
   display: flex;
   justify-content: space-around;
 }
 
-.form{
+.cart {
+  width: 100%;
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+}
 
+
+.cartDisplay {
+  margin-bottom: 50px;
+  width: 100%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  display: flex;
 }
 
 ul {
